# pdd-auto

./: .gitignore  QUICKSTART.md  README.md  activeContext.md  pyproject.toml
docs/: assumption-burden.md  corpus-readiness.md  demo-artifact-contract.md  provenance-policy.md  source-profile-vietnam-wte.md  vietnam-pdd-gap-analysis.md  vietnam-pdd-runbook.md  vietnam-pdd-validation.md
examples/: README.md  example-inegol-demo.docx  example-soc-son-demo.docx
plans/: 2026-04-22-agentic-wte-pdd-tool-plan.md  2026-04-24-vietnam-wte-verra-pdd-plan.md  2026-04-29-pdd-review-word-delivery-plan.md  2026-05-01-soc-son-client-demo-output-plan.md  2026-05-05-corpus-driven-pdd-generation-plan.md  2026-05-20-codex-insights-integration-plan.md  2026-05-22-demo-corpus-bundle-test-cleanup-plan.md  2026-05-22-demo-output-ux-prebuilt-artifacts-plan.md  2026-05-22-demo-quickstart-setup-hardening-plan.md
prompts/: section_draft.md
reports/: 2026-04-22-phase-01-wte-corpus-ingestion.html  2026-04-22-phase-02-domain-rules-and-schema.html  2026-04-22-phase-03-agentic-drafting-and-retrieval.html  2026-04-22-phase-04-compliance-review-and-export.html  2026-04-24-final-agentic-wte-pdd-tool.html  2026-04-24-phase-05-benchmark-and-demo.html  2026-04-25-vietnam-phase-01-02.html  2026-04-28-vietnam-phase05-completion.html  2026-04-29-final-pdd-review-word-delivery.html  2026-04-29-pdd-review-delivery-phase34.html  2026-04-29-pdd-review-word-delivery.html  2026-05-01-phase-01-demo-artifact-contract.html  2026-05-02-phase-02-demo-inputs.html  2026-05-02-phase-03-demo-output.html  demo-scorecard.md  (+28 more)
(+132 files in other folders)
